# riscv-emu

./: Cargo.toml  README.md
c_bindings/: Cargo.toml
c_bindings/src/: lib.rs
emu/: Cargo.toml
emu/src/: cpu.rs  emulator.rs  format.rs  interrupt_controller.rs  lib.rs  mcu.rs  memory.rs  rv32i.rs  terminal.rs  utils.rs
emu/src/instruction_set/: format.rs  mod.rs  privileged.rs  rv32i.rs
emu/src/instructions/: mod.rs  privileged.rs  rv32i.rs
emu/src/instructions/rv32i/: branch.rs  immediate.rs  load.rs  miscmem.rs  mod.rs  op.rs  store.rs  system.rs
emu/src/memory/: clint.rs  generic.rs  mapped_memory.rs  mmu.rs  mod.rs  plic.rs  uart.rs
emu/src/peripherals/: clint.rs  flash.rs  mod.rs  plic.rs  rom.rs  uart.rs
examples/: soft_interrupt.s  time_interrupt.s  uart_echo_uppercase_interrupt.s  uart_hello_world.s
macros/: Cargo.toml
macros/src/: instruction_format.rs  lib.rs
riscv_isa_parser/: Cargo.toml
riscv_isa_parser/src/: format.rs  lib.rs  privileged.rs
riscv_isa_types/: Cargo.toml  README.md
riscv_isa_types/src/: format.rs  privileged.rs  rv32i.rs
riscv_isa_types/src/rv32i/: branch.rs  immediate.rs  load.rs  miscmem.rs  mod.rs  op.rs  store.rs  system.rs
