[package]
name = "riscv-emu"
version = "0.1.0"
edition = "2021"


[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "riscv-emu"

[dependencies]
register-interface = "0.1.0"
macros = { path = "../macros" }
clap = { version = "4.0.26", features = ["derive"] }
bincode = "1.3.3"
