[package]
name = "riscv-emu"
version = "0.1.0"
edition = "2021"


[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "riscv-emu"

[dependencies]
register-interface = "0.1.0"
macros = { path = "../macros" }
riscv_isa_types = { path = "../riscv_isa_types" }
clap = { version = "4.0.26", features = ["derive"] }
bincode = "1.3.3"
log = "0.4.17"
env_logger = "0.10.0"
