[package]
name = "riscv_isa_types"
description = "RiscV instruction set types to aid with parsing or binary generation"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macros = { path = "../macros" }

